# EffDim

./: .gitignore  404.html  Cargo.toml  MANIFEST.in  PYPI_SETUP.md  README.md  RUST_BUILD.md  TODO.md  benchmark_final.py  benchmark_geometry.py  benchmark_realistic.py  benchmark_simple.py  benchmark_target.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: CI.yml  ci.yml  publish.yml  publish_docs.yml
api/: index.html
benchmarks/: benchmark_ensure_centered.py
deployment/: index.html
docs/: api.md  deployment.md  index.md  performance.md  theory.md
docs/tutorials/: advanced_geometric_analysis.md  comparing_estimators.md  geometric_analysis.md  getting_started.md
performance/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/: index.html
site/deployment/: index.html
site/performance/: index.html
site/search/: search_index.json
site/theory/: index.html
site/tutorials/advanced_geometric_analysis/: index.html
site/tutorials/comparing_estimators/: index.html
site/tutorials/geometric_analysis/: index.html
site/tutorials/getting_started/: index.html
src/effdim/: __init__.py  adapters.py  api.py  geometry.py  metrics.py
src_rust/: lib.rs
tests/: test_advanced_geometry.py  test_api.py  test_geometry.py  test_input_validation.py  test_known_dimensionalities.py  test_metrics.py  test_new_geometric_estimators.py  test_numerical_stability.py  test_public_api.py
theory/: index.html
tutorials/: tut1.py
tutorials/advanced_geometric_analysis/: index.html
tutorials/comparing_estimators/: index.html
tutorials/geometric_analysis/: index.html
tutorials/getting_started/: index.html
