[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "effdim"
version = "0.1.1"
description = "A unified library for estimating effective dimensionality."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [{ name = "amanasci", email = "kumaramanasci@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "faiss-cpu"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "mypy"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings[python]"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
